Add degree details

--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -59,3 +59,4 @@ education:
       details:
         - name: B.Sc. Computer and Information Science
           date: May 2011
+        - name: Major in Computer Science and Minor in Mathematical Science
